--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
 
 <html>
 <head>
-    <title>JALI TRANSPORT MANAGEMENT SYSTEM</title>
+    <title>TRANSPORT MANAGEMENT SYSTEM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=0">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
